Add 'Force Remove' button for stuck encoding jobs
Displays a 'Force Remove' button for jobs stuck in 'encoding' status for more than 10 minutes, allowing users to manually remove them from the dashboard.

--- a/dashboard/templates/index.html
+++ b/dashboard/templates/index.html
@@ -702,6 +702,10 @@
                                 `<button class="btn btn-xs btn-outline-danger" onclick="deleteJob(${job.id})" title="Delete Job">&times;</button>` :
                                 ''
                             }
+                            ${job.status === 'encoding' && job.age_minutes > 10 ?
+                                `<button class="btn btn-xs btn-danger" onclick="deleteJob(${job.id})" title="Force Remove Stuck Job">Force Remove</button>` :
+                                ''
+                            }
                         </td>
                     </tr>
                 `).join('');
